--- a/backend/app/views/spree/admin/orders/_add_product.html.erb
+++ b/backend/app/views/spree/admin/orders/_add_product.html.erb
@@ -10,7 +10,7 @@
   <div class="card-body">
     <div data-hook="add_product_name">
       <%= label_tag :add_variant_id, Spree.t(:name_or_sku) %>
-      <%= hidden_field_tag :add_variant_id, "", class: "variant_autocomplete fullwidth-input" %>
+      <%= hidden_field_tag :add_variant_id, "", class: "variant_autocomplete" %>
     </div>
 
     <div id="stock_details"></div>
