Replace some old label classes to new badge

--- a/backend/app/views/spree/admin/shared/_order_summary.html.erb
+++ b/backend/app/views/spree/admin/shared/_order_summary.html.erb
@@ -9,7 +9,7 @@
           <strong><%= Spree.t(:status) %>:</strong>
         </td>
         <td>
-          <span class="state label label-<%= @order.state %>">
+          <span class="state badge badge-<%= @order.state %>">
             <%= Spree.t(@order.state, scope: :order_state) %>
           </span>
         </td>
@@ -75,7 +75,7 @@
             <strong><%= Spree.t(:shipment) %>:</strong>
           </td>
           <td id='shipment_status'>
-            <span class="state label label-<%= @order.shipment_state %>">
+            <span class="state badge badge-<%= @order.shipment_state %>">
               <%= Spree.t(@order.shipment_state, scope: :shipment_states, default: [:missing, "none"]) %>
             </span>
           </td>
@@ -85,7 +85,7 @@
             <strong><%= Spree.t(:payment) %>:</strong>
           </td>
           <td id='payment_status'>
-            <span class="state label label-<%= @order.payment_state %>">
+            <span class="state badge badge-<%= @order.payment_state %>">
               <%= Spree.t(@order.payment_state, scope: :payment_states, default: [:missing, "none"]) %>
             </span>
           </td>
