--- a/frontend/app/views/spree/shared/_filters.html.erb
+++ b/frontend/app/views/spree/shared/_filters.html.erb
@@ -6,7 +6,11 @@
     <% filters.each do |filter| %>
       <% labels = filter[:labels] || filter[:conds].map {|m,c| [m,m]} %>
       <% next if labels.empty? %>
-      <div class="navigation mt-4" data-hook="navigation" aria-labelledby="products_search_wrapper" role="group">
+      <div 
+        class="navigation mt-4"
+        data-hook="navigation"
+        aria-labelledby="products_search_wrapper"
+        role="group">
 
         <h4 class="filter-title mt-0 h5" id="products_search_wrapper">
           <%= filter[:name] %>
