Fix grid classes

--- a/backend/app/views/spree/layouts/admin.html.erb
+++ b/backend/app/views/spree/layouts/admin.html.erb
@@ -67,7 +67,7 @@
             <%# Inner aside                                     %>
             <%#-------------------------------------------------%>
             <% if content_for?(:sidebar) %>
-              <div class="col-xs-4 col-md-3">
+              <div class="col-4 col-md-3">
                 <%= render partial: 'spree/admin/shared/sidebar' %>
               </div>
             <% end %>
