--- a/backend/app/views/spree/admin/promotions/_form.html.erb
+++ b/backend/app/views/spree/admin/promotions/_form.html.erb
@@ -1,7 +1,7 @@
 <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @promotion } %>
 
 <div class="row" id="general_fields" >
-  <div class="col-xs-6 col-md-3">
+  <div class="col-6 col-md-3">
     <%= f.field_container :name, class: ['form-group'] do %>
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
@@ -33,7 +33,7 @@
     <% end %>
   </div>
 
-  <div class="col-xs-12 col-md-6">
+  <div class="col-12 col-md-6">
     <%= f.field_container :description, class: ['form-group'] do %>
       <%= f.label :description %>
       <%= f.text_area :description, rows: 7, class: 'form-control' %>
@@ -45,7 +45,7 @@
     <% end %>
   </div>
 
-  <div id="expiry_fields" class="col-xs-6 col-md-3">
+  <div id="expiry_fields" class="col-6 col-md-3">
     <%= f.field_container :usage_limit do %>
       <%= f.label :usage_limit %>
       <%= f.number_field :usage_limit, min: 0, class: 'form-control' %>
