--- a/frontend/app/views/spree/shared/_order_details.html.erb
+++ b/frontend/app/views/spree/shared/_order_details.html.erb
@@ -1,6 +1,6 @@
 <div class="row steps-data">
   <% if order.has_step?("address") %>
-    <div class="col-md-3 col-sm-3 col-xs-6" data-hook="order-bill-address">
+    <div class="col-md-3 col-sm-3 col-6" data-hook="order-bill-address">
       <h4 class="h5">
         <%= Spree.t(:billing_address) %> <%= link_to "(#{Spree.t(:edit)})", checkout_state_path(:address) unless order.completed? %>
       </h4>
@@ -8,14 +8,14 @@
     </div>
 
     <% if order.has_step?("delivery") %>
-      <div class="col-md-3 col-sm-3 col-xs-6" data-hook="order-ship-address">
+      <div class="col-md-3 col-sm-3 col-6" data-hook="order-ship-address">
         <h4 class="h5">
           <%= Spree.t(:shipping_address) %> <%= link_to "(#{Spree.t(:edit)})", checkout_state_path(:address) unless order.completed? %>
         </h4>
         <%= render 'spree/shared/address', address: order.ship_address %>
       </div>
 
-      <div class="col-md-3 col-sm-3 col-xs-6" data-hook="order-shipment">
+      <div class="col-md-3 col-sm-3 col-6" data-hook="order-shipment">
         <h4 class="h5">
           <%= Spree.t(:shipments) %> <%= link_to "(#{Spree.t(:edit)})", checkout_state_path(:delivery) unless order.completed? %>
         </h4>
@@ -32,7 +32,7 @@
   <% end %>
 
   <% if order.has_step?("payment") %>
-    <div class="col-md-3 col-sm-3 col-xs-6" data-hook="order-payment">
+    <div class="col-md-3 col-sm-3 col-6" data-hook="order-payment">
       <h4 class="h5">
         <%= Spree.t(:payment_information) %> <%= link_to "(#{Spree.t(:edit)})", checkout_state_path(:payment) unless order.completed? %>
       </h4>
