Fix bottom margin classes

--- a/backend/app/views/spree/admin/products/stock.html.erb
+++ b/backend/app/views/spree/admin/products/stock.html.erb
@@ -41,7 +41,7 @@
             </td>
 
             <td colspan="3" class="stock_location_info">
-              <table class="table table-bordered no-marginb">
+              <table class="table table-bordered mb-0">
                 <thead>
                   <th><%= Spree.t(:stock_location) %></th>
                   <th class="text-center"><%= Spree.t(:count_on_hand) %></th>
