--- a/backend/app/views/spree/admin/variants/_autocomplete.js.erb
+++ b/backend/app/views/spree/admin/variants/_autocomplete.js.erb
@@ -2,9 +2,9 @@
   <div class='variant-autocomplete-item media'>
     <figure class='variant-image media-left'>
       {{#if variant.image }}
-        <img src='{{variant.image}}' class="thumbnail no-marginb" />
+        <img src='{{variant.image}}' class="thumbnail mb-0" />
       {{ else }}
-        <img src='<%= image_path("noimage/mini.png") %>' class="thumbnail no-marginb" />
+        <img src='<%= image_path("noimage/mini.png") %>' class="thumbnail mb-0" />
       {{/if}}
     </figure>
 
