--- a/backend/app/views/spree/admin/promotions/actions/_create_line_items.html.erb
+++ b/backend/app/views/spree/admin/promotions/actions/_create_line_items.html.erb
@@ -17,7 +17,7 @@
           <%= label_tag "#{line_item_prefix}_variant_id", Spree.t(:variant) %>
           <%= hidden_field_tag "#{line_item_prefix}[variant_id]", line_item.variant_id, class: "variant_autocomplete" %>
         </div>
-        <div class="form-group no-marginb">
+        <div class="form-group mb-0">
           <%= label_tag "#{line_item_prefix}_quantity", Spree.t(:quantity) %>
           <%= number_field_tag "#{line_item_prefix}[quantity]", line_item.quantity, min: 1, class: 'form-control' %>
         </div>
