--- a/backend/app/views/spree/admin/promotions/calculators/tiered_flat_rate/_fields.html.erb
+++ b/backend/app/views/spree/admin/promotions/calculators/tiered_flat_rate/_fields.html.erb
@@ -7,7 +7,7 @@
     type: calculator.preference_type(:base_amount)) %>
 </div>
 
-<div class="form-group no-marginb">
+<div class="form-group mb-0">
   <%= label_tag nil, Spree.t(:tiers) %>
   <%= content_tag :div, nil, class: "hidden js-original-tiers",
     data: { :'original-tiers' => Hash[calculator.preferred_tiers.sort] } %>
