--- a/backend/app/views/spree/admin/shared/_content_header.html.erb
+++ b/backend/app/views/spree/admin/shared/_content_header.html.erb
@@ -1,6 +1,6 @@
 <% if content_for?(:page_title) || content_for?(:page_actions) %>
   <div class="content-header <%= "with-page-tabs" if content_for?(:page_tabs) %> page-header">
-    <div class="row align-items-center border-bottom mb-4">
+    <div class="row align-items-center  <%= if content_for?(:page_tabs) then "pb-0" else "border-bottom" end %> mb-4">
       <% if content_for?(:page_title) %>
         <h1 class="h4 pl-0 mb-0 col-<%= content_for?(:page_actions) ? '6' : '12'  %>">
           <%= yield :page_title %>
@@ -17,7 +17,7 @@
       <% end %>
 
       <% if content_for?(:page_tabs) %>
-        <ul class="nav nav-tabs">
+        <ul class="nav nav-tabs w-100 mt-4">
           <%= yield :page_tabs %>
         </ul>
       <% end %>
