Fix autocomplete styles

--- a/backend/app/assets/stylesheets/spree/backend/plugins/_select2.scss
+++ b/backend/app/assets/stylesheets/spree/backend/plugins/_select2.scss
@@ -39,6 +39,7 @@
 .select2-search input {
   border-color: $input-border-color;
   border-radius: $border-radius;
+  background-image: none;
 }
 
 .select2-drop {
