Replace bootstrap-3 .well class with bootstrap-4 classes

--- a/backend/app/views/spree/admin/shared/_table_filter.html.erb
+++ b/backend/app/views/spree/admin/shared/_table_filter.html.erb
@@ -13,7 +13,7 @@
         <% end %>
       </div>
       <% unless defined?(simple) %>
-        <div id="table-filter" data-hook class="card bg-light well filter-well">
+        <div id="table-filter" data-hook class="card bg-light filter-well">
           <div class="card-body">
             <%= yield :table_filter %>
           </div>
