--- a/backend/app/views/spree/admin/products/_form.html.erb
+++ b/backend/app/views/spree/admin/products/_form.html.erb
@@ -85,25 +85,27 @@
       </div>
 
       <% if @product.has_variants? %>
-        <div data-hook="admin_product_form_multiple_variants" class="well">
-          <%= f.label :skus, Spree.t(:sku).pluralize %>
-          <div class="info marginb">
-            <%= Spree.t(:info_product_has_multiple_skus, count: @product.variants.size) %>
-            <ul class="text_list">
-              <% @product.variants.first(5).each do |variant| %>
-                <li><%= variant.sku %></li>
+        <div data-hook="admin_product_form_multiple_variants" class="card bg-light">
+          <div class="card-body">
+            <%= f.label :skus, Spree.t(:sku).pluralize %>
+            <div class="info marginb">
+              <%= Spree.t(:info_product_has_multiple_skus, count: @product.variants.size) %>
+              <ul class="text_list">
+                <% @product.variants.first(5).each do |variant| %>
+                  <li><%= variant.sku %></li>
+                <% end %>
+              </ul>
+              <% if @product.variants.size > 5 %>
+                <em>
+                  <%= Spree.t(:info_number_of_skus_not_shown, count: @product.variants.size - 5) %>
+                </em>
               <% end %>
-            </ul>
-            <% if @product.variants.size > 5 %>
-              <em>
-                <%= Spree.t(:info_number_of_skus_not_shown, count: @product.variants.size - 5) %>
-              </em>
-            <% end %>
-          </div>
-          <div class="info-actions">
-            <% if can?(:admin, Spree::Variant) %>
-              <%= link_to_with_icon 'variants', Spree.t(:manage_variants), spree.admin_product_variants_url(@product), class: "btn btn-default" %>
-            <% end %>
+            </div>
+            <div class="info-actions">
+              <% if can?(:admin, Spree::Variant) %>
+                <%= link_to_with_icon 'variants', Spree.t(:manage_variants), spree.admin_product_variants_url(@product), class: "btn btn-default" %>
+              <% end %>
+            </div>
           </div>
         </div>
       <% else %>
