Fix payment action icon color

--- a/backend/app/assets/stylesheets/spree/backend/components/_buttons.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_buttons.scss
@@ -18,4 +18,8 @@
 
 .btn.action-void { @extend .btn-danger; }
 .btn.action-capture { @extend .btn-success; }
-.btn.payment-action-edit { @extend .btn-primary; }
+.btn.payment-action-edit {
+  @extend .btn-primary;
+
+  color: $white !important;
+}
