--- a/backend/app/assets/stylesheets/spree/backend/plugins/_select2.scss
+++ b/backend/app/assets/stylesheets/spree/backend/plugins/_select2.scss
@@ -8,7 +8,8 @@
     background-image: none;
     background-color: $input-bg;
 
-    &, .select2-arrow {
+    &,
+    .select2-arrow {
       border-radius: $border-radius;
     }
 
