--- a/backend/app/views/spree/admin/payments/index.html.erb
+++ b/backend/app/views/spree/admin/payments/index.html.erb
@@ -20,7 +20,7 @@
 
 <% if @payments.any? %>
 
-  <div data-hook="payment_list" class="card mb-3 border-0 table-wrapper">
+  <div data-hook="payment_list" class="mb-3">
     <%= render partial: 'list', locals: { payments: @payments } %>
   </div>
 
