--- a/backend/app/views/spree/admin/tax_rates/_form.html.erb
+++ b/backend/app/views/spree/admin/tax_rates/_form.html.erb
@@ -18,9 +18,9 @@
             <%= f.text_field :amount, class: 'form-control' %>
             <%= f.error_message_on :amount %>
           <% end %>
-          <p class="help-block">
+          <small class="form-text text-muted">
             <%= Spree.t(:tax_rate_amount_explanation) %>
-          </p>
+          </small>
         </div>
         <div data-hook="included" class="form-group">
           <%= f.label :included_in_price do %>
