--- a/backend/app/views/spree/admin/tax_rates/_form.html.erb
+++ b/backend/app/views/spree/admin/tax_rates/_form.html.erb
@@ -7,6 +7,7 @@
     </div>
 
     <div class="card-body">
+      <div class="row">
       <div class="col-12 col-lg-6">
         <div data-hook="name" class="form-group">
           <%= f.label :name, Spree.t(:name) %>
@@ -17,10 +18,10 @@
             <%= f.label :amount, Spree.t(:rate) %>
             <%= f.text_field :amount, class: 'form-control' %>
             <%= f.error_message_on :amount %>
+            <small class="form-text text-muted">
+              <%= Spree.t(:tax_rate_amount_explanation) %>
+            </small>
           <% end %>
-          <small class="form-text text-muted">
-            <%= Spree.t(:tax_rate_amount_explanation) %>
-          </small>
         </div>
         <div data-hook="included" class="form-group">
           <%= f.label :included_in_price do %>
@@ -45,6 +46,7 @@
             <%= Spree.t(:show_rate_in_label) %>
           <% end %>
         </div>
+      </div>
       </div>
     </div>
 
