--- a/backend/app/views/spree/admin/variants/_split.js.erb
+++ b/backend/app/views/spree/admin/variants/_split.js.erb
@@ -21,8 +21,8 @@
     <td>
       <input class="quantity form-control" id="item_quantity" type="number" min="1" value="1" max="{{max_quantity}}">
     </td>
-    <td class='actions'>
-      <a href='#' class='cancel-split with-tip btn btn-sm btn-default' title='Cancel'>
+    <td class='actions text-center'>
+      <a href='#' class='cancel-split with-tip btn btn-sm btn-outline-secondary' title='Cancel'>
         <span class="icon icon-arrow-left"></span>
       </a>
       <a href='#' class='save-split with-tip btn btn-sm btn-success' title='Save'>
