--- a/frontend/app/views/spree/products/_thumbnails.html.erb
+++ b/frontend/app/views/spree/products/_thumbnails.html.erb
@@ -2,16 +2,18 @@
 <% if (@product.images + @product.variant_images).uniq.size > 1 %>
   <ul id="product-thumbnails" class="thumbnails d-flex w-100 pl-0 my-4" data-hook>
     <% @product.images.each do |i| %>
-      <li class='tmb-all mr-2 tmb-<%= i.viewable.id %>'>
-        <%= link_to(image_tag(main_app.url_for(i.url(:mini)), class: "img-thumbnail d-inline-block"), main_app.url_for(i.url(:product))) %>
+      <li class='tmb-all mb-2 tmb-<%= i.viewable.id %>'>
+        <% img_tag = image_tag(main_app.url_for(i.url(:mini)), class: "thumbnail", alt: set_image_alt(i, :mini)) %>
+        <%= link_to(img_tag, main_app.url_for(i.url(:product))) %>
       </li>
     <% end %>
 
     <% if @product.has_variants? %>
       <% @product.variant_images.each do |i| %>
         <% next if @product.images.include?(i) %>
-        <li class='vtmb mr-2 tmb-<%= i.viewable.id %>'>
-          <%= link_to(image_tag(main_app.url_for(i.url(:mini)), class: "img-thumbnail d-inline-block"), main_app.url_for(i.url(:product))) %>
+        <li class='vtmb mb-2  tmb-<%= i.viewable.id %>'>
+          <% img_tag = image_tag(main_app.url_for(i.url(:mini)), class: "thumbnail", alt: set_image_alt(i, :mini)) %>
+          <%= link_to(img_tag, main_app.url_for(i.url(:product))) %>
         </li>
       <% end %>
     <% end %>
