--- a/backend/app/views/spree/admin/orders/_shipment.html.erb
+++ b/backend/app/views/spree/admin/orders/_shipment.html.erb
@@ -3,14 +3,14 @@
   <%= render partial: "spree/admin/variants/split", formats: :js %>
 
   <div class="card-header stock-location no-borderb" data-hook="stock-location">
-    <h1 class="card-title mb-0 h5">
+    <h1 class="d-flex flex-wrap align-items-center card-title mb-0 h5">
       <span class="shipment-number"><%= shipment.number %></span>
       -
       <span class="shipment-state"><%= Spree.t("shipment_states.#{shipment.state}") %></span>
       <%= Spree.t(:package_from) %>
       <strong class="stock-location-name" data-hook="stock-location-name">'<%= shipment.stock_location.name %>'</strong>
       <% if shipment.ready? and can? :update, shipment %>
-        <%= link_to Spree.t(:ship), 'javascript:;', class: 'ship pull-right btn btn-success', data: { 'shipment-number' => shipment.number } %>
+        <%= link_to Spree.t(:ship), 'javascript:;', class: 'ship ml-auto btn btn-success', data: { 'shipment-number' => shipment.number } %>
         <div class='clearfix'></div>
       <% end %>
     </h1>
