--- a/backend/app/views/spree/admin/zones/_form.html.erb
+++ b/backend/app/views/spree/admin/zones/_form.html.erb
@@ -17,7 +17,7 @@
           <%= zone_form.text_field :description, class: 'form-control' %>
         <% end %>
 
-        <div data-hook="default" class="checkbox">
+        <div data-hook="default" class="form-group checkbox">
           <%= label_tag "zone[#{:default_tax}" do %>
             <%= zone_form.check_box :default_tax %>
             <%= Spree.t(:default_tax_zone) %>
@@ -26,13 +26,13 @@
 
         <div data-hook="type" class="form-group">
           <strong><%= Spree.t(:type) %></strong>
-          <div class="radio">
+          <div class="radio my-2">
             <%= label_tag :country_based do %>
               <%= zone_form.radio_button('kind', 'country', { id: 'country_based' }) %>
               <%= Spree.t(:country_based) %>
             <% end %>
           </div>
-          <div class="radio">
+          <div class="radio my-2">
             <%= label_tag :state_based do %>
               <%= zone_form.radio_button('kind', 'state', { id: 'state_based' }) %>
               <%= Spree.t(:state_based) %>
