Fix admin/countries and admin/payment_methods margin issues

--- a/backend/app/views/spree/admin/countries/_form.html.erb
+++ b/backend/app/views/spree/admin/countries/_form.html.erb
@@ -11,7 +11,7 @@
     <%= f.error_message_on :iso_name %>
   <% end %>
 
-  <div data-hook="states_required" class="checkbox">
+  <div data-hook="states_required" class="form-group checkbox">
     <label>
       <%= f.check_box :states_required %>
       <%= Spree.t(:states_required) %>
