--- a/backend/app/views/spree/admin/stock_transfers/new.html.erb
+++ b/backend/app/views/spree/admin/stock_transfers/new.html.erb
@@ -65,7 +65,9 @@
         <div class="col-12 col-lg-8">
           <div class="form-group" id="stock_movement_variant_id_field">
             <%= label_tag 'variant_id', Spree.t(:variant) %>
-            <%= hidden_field_tag 'transfer_variant', {} %>
+            <div class="input-group">
+              <%= hidden_field_tag 'transfer_variant', {}, { class: 'w-100'} %>
+            </div>
           </div>
         </div>
 
