Fix raimbursement and stock_locations margin issues

--- a/backend/app/views/spree/admin/reimbursement_types/_form.html.erb
+++ b/backend/app/views/spree/admin/reimbursement_types/_form.html.erb
@@ -17,14 +17,14 @@
   <% end %>
   <div class="col-12 col-md-5">
     <%= f.field_container :active, class: ['form-inline'] do %>
-      <%= f.check_box :active, class: 'form-control' %>
+      <%= f.check_box :active, class: 'form-control mr-1' %>
       <%= f.label :active, Spree.t(:active) %>
       <%= f.error_message_on :active %>
     <% end %>
   </div>
   <div class="col-12 col-md-5">
     <%= f.field_container :mutable, class: ['form-inline'] do %>
-      <%= f.check_box :mutable, class: 'form-control' %>
+      <%= f.check_box :mutable, class: 'form-control mr-1' %>
       <%= f.label :mutable, Spree.t(:mutable) %>
       <%= f.error_message_on :mutable %>
     <% end %>
