--- a/frontend/app/views/spree/products/show.html.erb
+++ b/frontend/app/views/spree/products/show.html.erb
@@ -2,7 +2,7 @@
 
 <% cache cache_key_for_product do %>
   <div data-hook="product_show" class="row" itemscope itemtype="https://schema.org/Product">
-    <div class="col-md-4 col-sm-5" data-hook="product_left_part">
+    <div class="col-lg-4 col-md-5" data-hook="product_left_part">
       <div data-hook="product_left_part_wrap">
         <div id="product-images" data-hook="product_images">
           <div id="main-image" class="card  " data-hook>
@@ -25,16 +25,16 @@
       </div>
     </div>
 
-    <div class="col-md-8 col-sm-7" data-hook="product_right_part">
+    <div class="col-lg-8 col-md-7" data-hook="product_right_part">
       <div data-hook="product_right_part_wrap">
         <div id="product-description" data-hook="product_description">
-          <h1 class="product-title" itemprop="name"><%= @product.name %></h1>
+          <h1 class="product-title mt-2" itemprop="name"><%= @product.name %></h1>
 
           <div itemprop="description" data-hook="description">
             <%= product_description(@product) %>
           </div>
 
-          <div id="cart-form" class="mt-4" data-hook="cart_form">
+          <div id="cart-form" data-hook="cart_form">
             <%= render partial: 'cart_form' %>
           </div>
         </div>
