Fix checkout/address bootstrap-4 issues

--- a/frontend/app/views/spree/checkout/_address.html.erb
+++ b/frontend/app/views/spree/checkout/_address.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-12 col-md-6" data-hook="billing_fieldset_wrapper">
+  <div class="col-12 col-md-6 mb-4" data-hook="billing_fieldset_wrapper">
     <div class="card card-default" id="billing" data-hook>
       <%= form.fields_for :bill_address do |bill_form| %>
         <div class="card-header">
