--- a/frontend/app/views/spree/checkout/edit.html.erb
+++ b/frontend/app/views/spree/checkout/edit.html.erb
@@ -3,11 +3,11 @@
 <div id="checkout" data-hook>
   <%= render partial: 'spree/shared/error_messages', locals: { target: @order } %>
 
-  <div class="row" data-hook="checkout_header">
-    <div class="col-sm-3">
-      <h1 data-hook="checkout_title"><%= Spree.t(:checkout) %></h1>
+  <div class="row align-items-center" data-hook="checkout_header">
+    <div class="col-md-3 mb-4">
+      <h1 class="mb-0" data-hook="checkout_title"><%= Spree.t(:checkout) %></h1>
     </div>
-    <div class="col-sm-9" data-hook="checkout_progress">
+    <div class="col-md-9 mb-4" data-hook="checkout_progress">
       <%= checkout_progress %>
     </div>
   </div>
