--- a/frontend/app/views/spree/checkout/_payment.html.erb
+++ b/frontend/app/views/spree/checkout/_payment.html.erb
@@ -71,7 +71,7 @@
   </div>
 </div>
 
-<div class="card text-right form-buttons mt-4" data-hook="buttons">
+<div class="card text-right form-buttons my-4" data-hook="buttons">
   <div class="card-body">
     <%= submit_tag Spree.t(:save_and_continue), class: 'btn btn-lg btn-success primary' %>
     <script>Spree.disableSaveOnClick();</script>
