--- a/frontend/app/views/spree/shared/_main_nav_bar.html.erb
+++ b/frontend/app/views/spree/shared/_main_nav_bar.html.erb
@@ -4,7 +4,7 @@
       <%= link_to Spree.t(:home), spree.root_path, class: 'nav-link' %>
     </li>
   </ul>
-  <ul class="nav" data-hook>
+  <ul class="nav navbar-right" data-hook>
     <li id="link-to-cart" class="nav-item" data-hook>
       <noscript>
         <%= link_to_cart %>
