--- a/backend/app/views/spree/admin/promotions/_promotion_rule.html.erb
+++ b/backend/app/views/spree/admin/promotions/_promotion_rule.html.erb
@@ -1,12 +1,12 @@
-<div class="promotion_rule promotion-block card" id="<%= dom_id promotion_rule %>">
+<div class="promotion_rule promotion-block card mb-3" id="<%= dom_id promotion_rule %>">
   <% type_name = promotion_rule.class.name.demodulize.underscore %>
-  <div class="card-header">
+  <div class="card-header d-flex justify-content-between">
     <%= link_to_with_icon 'delete', '',
       spree.admin_promotion_promotion_rule_path(@promotion, promotion_rule),
       remote: true,
       method: :delete,
-      class: 'delete pull-right' %>
-    <h3 class='card-title h5 promotion-title'>
+      class: 'delete order-2' %>
+    <h3 class='card-title h5 mb-0 promotion-title'>
       <%= Spree.t("promotion_rule_types.#{type_name}.description") %>
     </h3>
   </div>
