--- a/frontend/app/views/spree/orders/edit.html.erb
+++ b/frontend/app/views/spree/orders/edit.html.erb
@@ -7,7 +7,7 @@
     <div data-hook="empty_cart">
       <div class="alert alert-info"><%= Spree.t(:your_cart_is_empty) %></div>
       <p>
-        <%= link_to Spree.t(:continue_shopping), products_path, class: 'btn btn-default' %>
+        <%= link_to Spree.t(:continue_shopping), products_path, class: 'btn btn-outline-secondary' %>
       </p>
     </div>
   <% else %>
