Fix pagination component theme

--- a/backend/app/views/spree/admin/promotions/index.html.erb
+++ b/backend/app/views/spree/admin/promotions/index.html.erb
@@ -42,7 +42,7 @@
   </div>
 <% end %>
 
-<%= paginate @promotions %>
+<%= paginate @promotions, theme: 'twitter-bootstrap-4' %>
 
 <% if @promotions.any? %>
   <table class="table">
