--- a/backend/app/views/spree/admin/shared/_index_table_options.html.erb
+++ b/backend/app/views/spree/admin/shared/_index_table_options.html.erb
@@ -6,7 +6,7 @@
 
 <div class="row index-pagination-row">
   <div class="col-6">
-    <%= paginate collection %>
+    <%= paginate collection, theme: 'twitter-bootstrap-4' %>
   </div>
   <div class="col-6 justify-content-end">
     <div class="pagination-wrap">
