--- a/backend/app/views/kaminari/twitter-bootstrap-4/_gap.html.erb
+++ b/backend/app/views/kaminari/twitter-bootstrap-4/_gap.html.erb
@@ -1,11 +1,12 @@
-<%# Link to the "First" page
+<%# Non-link tag that stands for skipped pages...
   - available local variables
-    url:           url to the first page
     current_page:  a page object for the currently displayed page
     total_pages:   total number of pages
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<li class="first">
-  <%= link_to_unless current_page.first?, t('views.pagination.first').html_safe, url, remote: remote %>
+<li class="page gap disabled page-item">
+  <a href="#" onclick="return false;" class="page-link">
+    <%= raw(t 'views.pagination.truncate') %>
+  </a>
 </li>
