Fix jQuery deprecations.

--- a/backend/app/views/spree/admin/variants/_split.js.erb
+++ b/backend/app/views/spree/admin/variants/_split.js.erb
@@ -25,7 +25,7 @@
       <a href='#' class='cancel-split with-tip btn btn-sm btn-outline-secondary' title='Cancel'>
         <span class="icon icon-arrow-left"></span>
       </a>
-      <a href='#' class='save-split with-tip btn btn-sm btn-success' title='Save'>
+      <a href='#' class='icon-save-split save-split with-tip btn btn-sm btn-success' title='Save'>
         <span class="icon icon-save"></span>
       </a>
     </td>
