--- a/frontend/app/views/spree/products/_properties.html.erb
+++ b/frontend/app/views/spree/products/_properties.html.erb
@@ -1,4 +1,4 @@
-<% unless @product_properties.empty? %>  
+<% unless @product_properties.blank? %>  
   <h3 class="product-section-title"><%= Spree.t('properties')%></h3>
   <table id="product-properties" class="table table-striped" data-hook>
     <tbody>
