--- a/guides/layouts/developer/_sidebar.html
+++ b/guides/layouts/developer/_sidebar.html
@@ -61,7 +61,7 @@
           <li><i class="icon-dot"></i><%= link_to "View", '/developer/view' %> <div class="toc"></div> </li>
           <li><i class="icon-dot"></i><%= link_to "Asset", '/developer/asset' %> <div class="toc"></div> </li>
           <li><i class="icon-dot"></i><%= link_to "Logic", '/developer/logic' %> <div class="toc"></div> </li>
-          <li><i class="icon-dot"></i><%= link_to "Use S3", '/developer/s3_storage' %> <div class="toc"></div> </li>
+          <li><i class="icon-dot"></i><%= link_to "Images", '/developer/images' %> <div class="toc"></div> </li>
           <li><i class="icon-dot"></i><%= link_to "Checkout", '/developer/checkout' %> <div class="toc"></div> </li>
         </ul>
       </li>
