--- a/backend/app/assets/stylesheets/spree/backend/global/_variables.scss
+++ b/backend/app/assets/stylesheets/spree/backend/global/_variables.scss
@@ -6,15 +6,20 @@
   $brand-info:    #48B0F7;
   $brand-warning: #F8D053;
   $brand-danger:  #F55753;
-
   $input-border:  darken(#EDEDED, 5);
+  $ui-background-color: #f9fafb;
+  $panel-background-color: #fff;
+  $nav-background-color: #fff;
 
 /*------------------------------------------
   Components
   -----------------------------------------*/
   $border-radius-base: 2px;
+  $ui-border-radius: $border-radius-base + 2 ;
   $padding-base-vertical: 8px;
   $padding-base-horizontal: 16px;
+  $sidebar-width: 210px;
+  $menu-speed: 300ms;
 
 /*------------------------------------------
   Fonts
@@ -29,7 +34,7 @@
 /*------------------------------------------
   Navbar
   -----------------------------------------*/
-  $navbar-inverse-bg: darken($brand-primary, 35);
+  $navbar-inverse-bg: #fff;
 
 /*------------------------------------------
   Wells
