--- a/backend/app/views/spree/admin/shared/_header.html.erb
+++ b/backend/app/views/spree/admin/shared/_header.html.erb
@@ -3,19 +3,23 @@
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container-fluid">
       <div class="row">
-        <div class="navbar-header col-xs-3 col-md-2">
-          <%= link_to(
-            image_tag(Spree::Config[:admin_interface_logo], id: 'logo'),
-            spree.admin_path,
-            class: "logo navbar-brand"
-          ) %>
+        <div class="navbar-header col-xs-4 hidden-sm hidden-lg hidden-md">
             <span class="navbar-toggle" id="sidebar-toggle">
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </span>
         </div>
-        <div class="col-xs-9 col-md-10">
+        <div class="navbar-center col-xs-4 col-sm-6">
+          <div class="center-xs">
+            <%= link_to(
+              image_tag(Spree::Config[:admin_interface_logo], id: 'logo'),
+              spree.admin_path,
+              class: "logo navbar-brand"
+            ) %>
+          </div>
+        </div>
+        <div class="col-xs-4 col-sm-6">
           <div class="navbar-right">
             <%= render partial: 'spree/admin/shared/account_nav' %>
           </div>
